--- a/React/package.json
+++ b/React/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.6",
+    "eventemitter3": "^5.0.1",
     "jose": "^5.3.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
