--- a/php/composer.json
+++ b/php/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "firebase/php-jwt": "^6.10"
+        "firebase/php-jwt": "^6.10",
+      "ext-json": "*",
+      "ext-mysqli": "*"
     }
 }
