--- a/DockerfileReact
+++ b/DockerfileReact
@@ -2,9 +2,11 @@
 FROM node as vite-app
 
 WORKDIR /app/React
+
 COPY ./React .
 
 RUN npm install
+
 RUN npm run build
 
 FROM nginx:latest
@@ -15,5 +17,9 @@ RUN rm -rf html
 RUN mkdir html
 
 COPY --from=vite-app /app/React/dist /usr/share/nginx/html
+
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
 
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
