--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     restart: unless-stopped
     build:
       context: .
-      dockerfile: Dockerfile1
+      dockerfile: DockerfilePHP
     volumes:
       - "./php:/var/www/html"
     environment:
@@ -34,7 +34,7 @@ services:
     container_name: frontend
     build:
       context: .
-      dockerfile: DockerfileReact
+      dockerfile: DockerfileREACT
     restart: always
     ports:
       - 5173:80
