--- a/kind/db-deployment.yaml
+++ b/kind/db-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose convert
+    kompose.cmd: kompose convert -f docker-compose.yml -o kind/
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
@@ -18,7 +18,7 @@ spec:
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose convert
+        kompose.cmd: kompose convert -f docker-compose.yml -o kind/
         kompose.version: 1.26.0 (40646f47)
       creationTimestamp: null
       labels:
@@ -26,7 +26,16 @@ spec:
         io.kompose.service: db
     spec:
       containers:
-        - image: mysql:latest
+        - env:
+            - name: MYSQL_DATABASE
+              value: react-php
+            - name: MYSQL_PASSWORD
+              value: password
+            - name: MYSQL_ROOT_PASSWORD
+              value: password
+            - name: MYSQL_USER
+              value: root
+          image: mysql:latest
           name: db
           ports:
             - containerPort: 3306
