--- a/kind/frontend-deployment.yaml
+++ b/kind/frontend-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose convert
+    kompose.cmd: kompose convert -f docker-compose.yml -o kind/
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
@@ -17,7 +17,7 @@ spec:
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose convert
+        kompose.cmd: kompose convert -f docker-compose.yml -o kind/
         kompose.version: 1.26.0 (40646f47)
       creationTimestamp: null
       labels:
@@ -25,7 +25,7 @@ spec:
         io.kompose.service: frontend
     spec:
       containers:
-        - image: manuel393/react-frontend:latest
+        - image: nginx:alpine
           name: frontend
           ports:
             - containerPort: 80
