--- a/kind/backend-deployment.yaml
+++ b/kind/backend-deployment.yaml
@@ -2,9 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f docker-compose.yml -o kind/
-    kompose.version: 1.26.0 (40646f47)
-  creationTimestamp: null
+    kompose.cmd: kompose convert -o kind
+    kompose.version: 1.34.0 (cbf2835db)
   labels:
     io.kompose.service: backend
   name: backend
@@ -13,22 +12,27 @@ spec:
   selector:
     matchLabels:
       io.kompose.service: backend
-  strategy: {}
+  strategy:
+    type: Recreate
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose convert -f docker-compose.yml -o kind/
-        kompose.version: 1.26.0 (40646f47)
-      creationTimestamp: null
+        kompose.cmd: kompose convert -o kind
+        kompose.version: 1.34.0 (cbf2835db)
       labels:
-        io.kompose.network/sqlnetwork: "true"
         io.kompose.service: backend
     spec:
       containers:
-        - image: php:8.2-apache
+        - image: backend
           name: backend
           ports:
             - containerPort: 80
-          resources: {}
+              protocol: TCP
+          volumeMounts:
+            - mountPath: /var/www/html
+              name: backend-cm0
       restartPolicy: Always
-status: {}
+      volumes:
+        - configMap:
+            name: backend-cm0
+          name: backend-cm0
