--- a/kind/backend-service.yaml
+++ b/kind/backend-service.yaml
@@ -2,9 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f docker-compose.yml -o kind/
-    kompose.version: 1.26.0 (40646f47)
-  creationTimestamp: null
+    kompose.cmd: kompose convert -o kind
+    kompose.version: 1.34.0 (cbf2835db)
   labels:
     io.kompose.service: backend
   name: backend
@@ -15,5 +14,3 @@ spec:
       targetPort: 80
   selector:
     io.kompose.service: backend
-status:
-  loadBalancer: {}
