--- a/kind/db-deployment.yaml
+++ b/kind/db-deployment.yaml
@@ -2,9 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f docker-compose.yml -o kind/
-    kompose.version: 1.26.0 (40646f47)
-  creationTimestamp: null
+    kompose.cmd: kompose convert -o kind
+    kompose.version: 1.34.0 (cbf2835db)
   labels:
     io.kompose.service: db
   name: db
@@ -18,28 +17,19 @@ spec:
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose convert -f docker-compose.yml -o kind/
-        kompose.version: 1.26.0 (40646f47)
-      creationTimestamp: null
+        kompose.cmd: kompose convert -o kind
+        kompose.version: 1.34.0 (cbf2835db)
       labels:
-        io.kompose.network/sqlnetwork: "true"
         io.kompose.service: db
     spec:
       containers:
         - env:
             - name: MYSQL_DATABASE
               value: react-php
-            - name: MYSQL_PASSWORD
-              value: password
             - name: MYSQL_ROOT_PASSWORD
               value: password
-            - name: MYSQL_USER
-              value: root
           image: mysql:latest
           name: db
-          ports:
-            - containerPort: 3306
-          resources: {}
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: sqldb
@@ -48,4 +38,3 @@ spec:
         - name: sqldb
           persistentVolumeClaim:
             claimName: sqldb
-status: {}
