--- a/kind/phpmyadmin-deployment.yaml
+++ b/kind/phpmyadmin-deployment.yaml
@@ -2,9 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f docker-compose.yml -o kind/
-    kompose.version: 1.26.0 (40646f47)
-  creationTimestamp: null
+    kompose.cmd: kompose convert -o kind
+    kompose.version: 1.34.0 (cbf2835db)
   labels:
     io.kompose.service: phpmyadmin
   name: phpmyadmin
@@ -13,15 +12,12 @@ spec:
   selector:
     matchLabels:
       io.kompose.service: phpmyadmin
-  strategy: {}
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose convert -f docker-compose.yml -o kind/
-        kompose.version: 1.26.0 (40646f47)
-      creationTimestamp: null
+        kompose.cmd: kompose convert -o kind
+        kompose.version: 1.34.0 (cbf2835db)
       labels:
-        io.kompose.network/sqlnetwork: "true"
         io.kompose.service: phpmyadmin
     spec:
       containers:
@@ -36,6 +32,5 @@ spec:
           name: phpmyadmin
           ports:
             - containerPort: 80
-          resources: {}
+              protocol: TCP
       restartPolicy: Always
-status: {}
