--- a/kind/backend-deployment.yaml
+++ b/kind/backend-deployment.yaml
@@ -3,7 +3,8 @@ kind: Deployment
 metadata:
   annotations:
     kompose.cmd: kompose convert -o kind
-    kompose.version: 1.34.0 (cbf2835db)
+    kompose.version: 1.26.0 (40646f47)
+  creationTimestamp: null
   labels:
     io.kompose.service: backend
   name: backend
@@ -12,27 +13,22 @@ spec:
   selector:
     matchLabels:
       io.kompose.service: backend
-  strategy:
-    type: Recreate
+  strategy: {}
   template:
     metadata:
       annotations:
         kompose.cmd: kompose convert -o kind
-        kompose.version: 1.34.0 (cbf2835db)
+        kompose.version: 1.26.0 (40646f47)
+      creationTimestamp: null
       labels:
+        io.kompose.network/sqlnetwork: "true"
         io.kompose.service: backend
     spec:
       containers:
-        - image: backend
+        - image: manuel393/backend-reactphp:v1.0
           name: backend
           ports:
             - containerPort: 80
-              protocol: TCP
-          volumeMounts:
-            - mountPath: /var/www/html
-              name: backend-cm0
+          resources: {}
       restartPolicy: Always
-      volumes:
-        - configMap:
-            name: backend-cm0
-          name: backend-cm0
+status: {}
