--- a/kind/db-deployment.yaml
+++ b/kind/db-deployment.yaml
@@ -3,7 +3,8 @@ kind: Deployment
 metadata:
   annotations:
     kompose.cmd: kompose convert -o kind
-    kompose.version: 1.34.0 (cbf2835db)
+    kompose.version: 1.26.0 (40646f47)
+  creationTimestamp: null
   labels:
     io.kompose.service: db
   name: db
@@ -18,8 +19,10 @@ spec:
     metadata:
       annotations:
         kompose.cmd: kompose convert -o kind
-        kompose.version: 1.34.0 (cbf2835db)
+        kompose.version: 1.26.0 (40646f47)
+      creationTimestamp: null
       labels:
+        io.kompose.network/sqlnetwork: "true"
         io.kompose.service: db
     spec:
       containers:
@@ -30,6 +33,9 @@ spec:
               value: password
           image: mysql:latest
           name: db
+          ports:
+            - containerPort: 3306
+          resources: {}
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: sqldb
@@ -38,3 +44,4 @@ spec:
         - name: sqldb
           persistentVolumeClaim:
             claimName: sqldb
+status: {}
