--- a/kind/frontend-deployment.yaml
+++ b/kind/frontend-deployment.yaml
@@ -3,7 +3,8 @@ kind: Deployment
 metadata:
   annotations:
     kompose.cmd: kompose convert -o kind
-    kompose.version: 1.34.0 (cbf2835db)
+    kompose.version: 1.26.0 (40646f47)
+  creationTimestamp: null
   labels:
     io.kompose.service: frontend
   name: frontend
@@ -12,27 +13,21 @@ spec:
   selector:
     matchLabels:
       io.kompose.service: frontend
-  strategy:
-    type: Recreate
+  strategy: {}
   template:
     metadata:
       annotations:
         kompose.cmd: kompose convert -o kind
-        kompose.version: 1.34.0 (cbf2835db)
+        kompose.version: 1.26.0 (40646f47)
+      creationTimestamp: null
       labels:
         io.kompose.service: frontend
     spec:
       containers:
-        - image: frontend
+        - image: manuel393/frontend-reactphp:v1.0
           name: frontend
           ports:
             - containerPort: 80
-              protocol: TCP
-          volumeMounts:
-            - mountPath: /usr/share/nginx/html
-              name: frontend-cm0
+          resources: {}
       restartPolicy: Always
-      volumes:
-        - configMap:
-            name: frontend-cm0
-          name: frontend-cm0
+status: {}
