--- a/kind/phpmyadmin-deployment.yaml
+++ b/kind/phpmyadmin-deployment.yaml
@@ -3,7 +3,8 @@ kind: Deployment
 metadata:
   annotations:
     kompose.cmd: kompose convert -o kind
-    kompose.version: 1.34.0 (cbf2835db)
+    kompose.version: 1.26.0 (40646f47)
+  creationTimestamp: null
   labels:
     io.kompose.service: phpmyadmin
   name: phpmyadmin
@@ -12,12 +13,15 @@ spec:
   selector:
     matchLabels:
       io.kompose.service: phpmyadmin
+  strategy: {}
   template:
     metadata:
       annotations:
         kompose.cmd: kompose convert -o kind
-        kompose.version: 1.34.0 (cbf2835db)
+        kompose.version: 1.26.0 (40646f47)
+      creationTimestamp: null
       labels:
+        io.kompose.network/sqlnetwork: "true"
         io.kompose.service: phpmyadmin
     spec:
       containers:
@@ -32,5 +36,6 @@ spec:
           name: phpmyadmin
           ports:
             - containerPort: 80
-              protocol: TCP
+          resources: {}
       restartPolicy: Always
+status: {}
