--- a/kind/sqldb-persistentvolumeclaim.yaml
+++ b/kind/sqldb-persistentvolumeclaim.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  creationTimestamp: null
   labels:
     io.kompose.service: sqldb
   name: sqldb
@@ -10,3 +11,4 @@ spec:
   resources:
     requests:
       storage: 100Mi
+status: {}
