--- a/React/package.json
+++ b/React/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.6",
     "eventemitter3": "^5.0.1",
+    "faker": "^6.6.6",
     "jose": "^5.3.0",
     "jsonwebtoken": "^9.0.2",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.2.1",
     "react-router-dom": "^6.21.3",
+    "react-select": "^5.8.0",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.0.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
