--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.9"
 
 services:
   backend:
@@ -14,26 +14,51 @@ services:
   frontend:
     container_name: frontend
     image: manuel393/frontend-reactphp:v1.0
+    expose:
+      - "80"
     ports:
-      - "5173:80"
+      - "3001:80"
     depends_on:
       - backend
+    networks:
+      - webnetwork
 
   frontend-na:
     container_name: frontend-na
     image: manuel393/frontend-na-reactphp:v1.0
+    expose:
+      - "80"
     ports:
-      - "5174:80"
+      - "3002:80"
     depends_on:
       - backend
+    networks:
+      - webnetwork
 
   frontend-as:
     container_name: frontend-as
     image: manuel393/frontend-as-reactphp:v1.0
+    expose:
+      - "80"
     ports:
-      - "5175:80"
+      - "3003:80"
     depends_on:
       - backend
+    networks:
+      - webnetwork
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "5173:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - frontend
+      - frontend-na
+      - frontend-as
+    networks:
+      - webnetwork
 
   db:
     image: mysql:latest
@@ -62,6 +87,7 @@ services:
 
 networks:
   sqlnetwork:
+  webnetwork:
 
 volumes:
   sqldb:
