--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,18 @@
+upstream frontends {
+    least_conn;
+    server frontend:3001;
+    server frontend-na:3002;
+    server frontend-as:3003;
+}
+
 server {
     listen 80;
-    server_name localhost;
-
-    root /usr/share/nginx/html;
-    index index.html;
 
     location / {
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://frontends;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
-
-    error_page 404 /404.html;
 }
