--- a/React/Dockerfile
+++ b/React/Dockerfile
@@ -1,16 +1,12 @@
-FROM node:16.3.0-alpine AS prod
+FROM node:18-alpine AS build
 
 WORKDIR /app
 
-COPY package.json /app
+RUN apk add --no-cache python3 make g++
 
-RUN npm install -g npm@8
-
-RUN npm cache clean --force
+COPY package.json package-lock.json /app/
 
 RUN npm install
-
-RUN npm install esbuild vite
 
 COPY . /app
 
@@ -20,7 +16,7 @@ FROM nginx:alpine
 
 WORKDIR /usr/local/bin
 
-COPY --from=prod /app/dist /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
 
 COPY generate-config.sh .
 
@@ -28,4 +24,4 @@ RUN chmod +x generate-config.sh
 
 EXPOSE 80
 
-ENTRYPOINT [ "/bin/sh", "generate-config.sh"]
+ENTRYPOINT [ "/bin/sh", "generate-config.sh" ]
