--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,54 +11,41 @@ services:
     depends_on:
       - db
 
-  frontend:
-    container_name: frontend
-    image: manuel393/frontend-reactphp:v1.0
+  frontend-1:
+    container_name: frontend-1
+    build: ./React
     expose:
       - "80"
     ports:
       - "3001:80"
+    environment:
+      - NOME_SERVIZIO="Frontend 1"
     depends_on:
       - backend
-    networks:
-      - webnetwork
 
-  frontend-na:
-    container_name: frontend-na
-    image: manuel393/frontend-na-reactphp:v1.0
+  frontend-2:
+    container_name: frontend-2
+    build: ./React
     expose:
       - "80"
     ports:
       - "3002:80"
+    environment:
+      - NOME_SERVIZIO="Frontend 2"
     depends_on:
       - backend
-    networks:
-      - webnetwork
 
-  frontend-as:
-    container_name: frontend-as
-    image: manuel393/frontend-as-reactphp:v1.0
+  frontend-3:
+    container_name: frontend-3
+    build: ./React
     expose:
       - "80"
     ports:
       - "3003:80"
+    environment:
+      - NOME_SERVIZIO="Frontend 3"
     depends_on:
       - backend
-    networks:
-      - webnetwork
-
-  nginx:
-    image: nginx:latest
-    ports:
-      - "5173:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - frontend
-      - frontend-na
-      - frontend-as
-    networks:
-      - webnetwork
 
   db:
     image: mysql:latest
@@ -87,7 +74,6 @@ services:
 
 networks:
   sqlnetwork:
-  webnetwork:
 
 volumes:
   sqldb:
