--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,15 @@
-upstream frontends {
-    least_conn;
+upstream frontend_servers {
     server frontend:3001;
-    server frontend-na:3002;
-    server frontend-as:3003;
+    server frontend:3002;
+    server frontend:3003;
 }
 
 server {
     listen 80;
-
+    
     location / {
-        proxy_pass http://frontends;
+         # Inoltra le richieste al backend
+        proxy_pass http://frontend_servers;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
