--- a/kind/backend-deployment.yaml
+++ b/kind/backend-deployment.yaml
@@ -3,8 +3,7 @@ kind: Deployment
 metadata:
   annotations:
     kompose.cmd: kompose convert -o kind
-    kompose.version: 1.26.0 (40646f47)
-  creationTimestamp: null
+    kompose.version: 1.34.0 (cbf2835db)
   labels:
     io.kompose.service: backend
   name: backend
@@ -13,15 +12,12 @@ spec:
   selector:
     matchLabels:
       io.kompose.service: backend
-  strategy: {}
   template:
     metadata:
       annotations:
         kompose.cmd: kompose convert -o kind
-        kompose.version: 1.26.0 (40646f47)
-      creationTimestamp: null
+        kompose.version: 1.34.0 (cbf2835db)
       labels:
-        io.kompose.network/sqlnetwork: "true"
         io.kompose.service: backend
     spec:
       containers:
@@ -29,6 +25,5 @@ spec:
           name: backend
           ports:
             - containerPort: 80
-          resources: {}
+              protocol: TCP
       restartPolicy: Always
-status: {}
