--- a/kind/db-deployment.yaml
+++ b/kind/db-deployment.yaml
@@ -3,8 +3,7 @@ kind: Deployment
 metadata:
   annotations:
     kompose.cmd: kompose convert -o kind
-    kompose.version: 1.26.0 (40646f47)
-  creationTimestamp: null
+    kompose.version: 1.34.0 (cbf2835db)
   labels:
     io.kompose.service: db
   name: db
@@ -19,10 +18,8 @@ spec:
     metadata:
       annotations:
         kompose.cmd: kompose convert -o kind
-        kompose.version: 1.26.0 (40646f47)
-      creationTimestamp: null
+        kompose.version: 1.34.0 (cbf2835db)
       labels:
-        io.kompose.network/sqlnetwork: "true"
         io.kompose.service: db
     spec:
       containers:
@@ -35,7 +32,7 @@ spec:
           name: db
           ports:
             - containerPort: 3306
-          resources: {}
+              protocol: TCP
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: sqldb
@@ -44,4 +41,3 @@ spec:
         - name: sqldb
           persistentVolumeClaim:
             claimName: sqldb
-status: {}
