--- a/kind/frontend-deployment.yaml
+++ b/kind/frontend-deployment.yaml
@@ -3,8 +3,7 @@ kind: Deployment
 metadata:
   annotations:
     kompose.cmd: kompose convert -o kind
-    kompose.version: 1.26.0 (40646f47)
-  creationTimestamp: null
+    kompose.version: 1.34.0 (cbf2835db)
   labels:
     io.kompose.service: frontend
   name: frontend
@@ -13,13 +12,11 @@ spec:
   selector:
     matchLabels:
       io.kompose.service: frontend
-  strategy: {}
   template:
     metadata:
       annotations:
         kompose.cmd: kompose convert -o kind
-        kompose.version: 1.26.0 (40646f47)
-      creationTimestamp: null
+        kompose.version: 1.34.0 (cbf2835db)
       labels:
         io.kompose.service: frontend
     spec:
@@ -28,6 +25,5 @@ spec:
           name: frontend
           ports:
             - containerPort: 80
-          resources: {}
+              protocol: TCP
       restartPolicy: Always
-status: {}
