--- a/kind/frontend-service.yaml
+++ b/kind/frontend-service.yaml
@@ -3,17 +3,16 @@ kind: Service
 metadata:
   annotations:
     kompose.cmd: kompose convert -o kind
-    kompose.version: 1.26.0 (40646f47)
-  creationTimestamp: null
+    kompose.version: 1.34.0 (cbf2835db)
   labels:
     io.kompose.service: frontend
   name: frontend
 spec:
+  type: NodePort
   ports:
     - name: "5173"
       port: 5173
       targetPort: 80
+      nodePort: 30001
   selector:
     io.kompose.service: frontend
-status:
-  loadBalancer: {}
